<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_500"
        app:contentInsetStart="0dp"
        app:titleTextColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_baseline_arrow_back_24"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/nunitoreguler"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/changelanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunitoreguler"
        android:text="@string/setting_language"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24" />


    <TextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/nunitoreguler"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:fontFamily="@font/nunitoreguler"
        android:text="@string/rate"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24" />

    <TextView
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/nunitoreguler"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="25dp"
        android:text="@string/author"
        android:textSize="12sp" />


</LinearLayout>